--- a/whill/package.xml
+++ b/whill/package.xml
@@ -14,6 +14,7 @@
   <exec_depend>whill_driver</exec_depend>
   <exec_depend>whill_bringup</exec_depend>
   <exec_depend>whill_examples</exec_depend>
+  <exec_depend>whill_description</exec_depend>
 
   <export>
     <build_type>ament_cmake</build_type>
