xacro→urdf展開エラーの修正+gazeboビルドエラーの修正

--- a/whill_description/package.xml
+++ b/whill_description/package.xml
@@ -1,13 +1,20 @@
 <?xml version="1.0"?>
-<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
 <package format="3">
   <name>whill_description</name>
-  <version>0.0.1</version>
-  <description>WHILL Model CR2 description package</description>
-  <maintainer email="george.mandokoro@whill.inc">George Mandokoro</maintainer>
-  <license>MIT</license>
-  <exec_depend>urdf</exec_depend>
-  <export>
-   <build_type>ament_cmake</build_type>
-  </export>
+  <version>0.0.0</version>
+  <description>WHILL robot description package</description>
+  <maintainer email="you@example.com">you</maintainer>
+  <license>Apache-2.0</license>
+
+  <buildtool_depend>ament_cmake</buildtool_depend>
+
+  <!-- runtime / launch deps -->
+  <depend>launch</depend>
+  <depend>launch_ros</depend>
+  <depend>xacro</depend>
+  <depend>robot_state_publisher</depend>
+  <depend>joint_state_publisher</depend>
+  <depend>controller_manager</depend>
+  <depend>ros_gz_sim</depend>
+  <depend>gazebo_ros</depend>
 </package>
