--- a/whill_description/CMakeLists.txt
+++ b/whill_description/CMakeLists.txt
@@ -3,12 +3,9 @@ project(whill_description)
 
 find_package(ament_cmake REQUIRED)
 
-install(DIRECTORY urdf
-  DESTINATION share/${PROJECT_NAME})
-
-if(BUILD_TESTING)
-  find_package(ament_lint_auto REQUIRED)
-  ament_lint_auto_find_test_dependencies()
-endif()
+# install urdf & launch so FindPackageShare can find them
+install(DIRECTORY urdf launch
+  DESTINATION share/${PROJECT_NAME}
+)
 
 ament_package()
